# standard-sirens

./: .gitignore  LICENSE  README.md  condaenv.yml  pyproject.toml  requirements.txt
notebooks/: fast_injections.ipynb  inference_with_galaxy_catalogs.ipynb  population_prior.ipynb  visualize_mcmc.ipynb  visualize_nested_sampling.ipynb
sirenslib/catalog/: README.md  cl.py  parser.py  utils.py
sirenslib/gw/: README.md  coordinates.py  detector.py  event.py  skymap.py  utils.py  waveform.py
sirenslib/inference/: README.md  likelihood.py  population.py  pp_analysis.py  prior.py  sampling.py
sirenslib/scripts/: README.md  cls.py  cls_gw.py  dark_siren_inference.py  parse_catalog.py
sirenslib/sensitivity/: README.md
sirenslib/utils/: functions.py  io.py  logger.py  math.py
src/: fast_injections.ipynb  inference_with_galaxy_catalogs.ipynb  inference_with_merger_rate_prior.ipynb  inferring_H0_with_standard_sirens.ipynb  population_prior.ipynb  pp_analysis.ipynb  simplified_likelihood.ipynb  visualize_catalog.ipynb  visualize_mcmc.ipynb  visualize_nested_sampling.ipynb
src/catalog/: README.md  parse_catalog.py  parser.py  strip_catalog_columns.sh  utils.py  visualize_catalog.ipynb
src/gw/: coordinates.py  detector.py  event.py  gwdali.py  utils.py  waveform.py
src/inference/: constants.py  likelihood.py  population.py  pp_analysis.py  prior.py  sampling.py  simplified_likelihood.ipynb  utils.py
src/scripts/: README.md  catalog_angular_power_spectrum.py  cls.py  get_catalog.sh  inference_merger_rate_prior.py  parse_catalog.py
src/utils/: cosmology.py  functions.py  hdf5.py  logger.py
tex/: latexindent.yaml  main.tex  prospects.tex  refs.bib
tex/sections/: introduction.tex
